# corust

./: CHANGELOG.md  Cargo.toml  README.md
src/: codegen.rs  enum_parser.rs  helpers.rs  lib.rs  match_macro.rs  parser.rs  pattern_parser.rs  type_analysis.rs  types.rs  variant_gen.rs
tests/: examples.rs  generics_test.rs  main_test.rs
